Solved problem 4. If all texts in the body needs a certain edit, just do it in the body declaration of css (like align-text:center)

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -7,9 +7,27 @@ img {
   height: 100px;
 }
 
+.text{
+  text-align: center;
+}
+
+.items{
+  display: flex;
+  gap:52px;
+  justify-content: center;
+}
+
+.prod{
+  display: flex;
+  width: 200px;
+  flex-direction: column;
+  align-items: center;
+}
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom :32px ;
 }
 
 /* do not edit this footer */
